# rstsc

./: .gitignore  LICENSE  README.md  TODO.md  build_wasm.sh  speed.yaml
ast_based/: Cargo.toml
ast_based/src/: ast.rs  emit.rs  ft.rs  main.rs  minify.rs  operations.rs  parser.rs  test.ts  tokenizer.rs  type_checking.rs  types.rs
rstsc/: Cargo.toml
rstsc/src/: ast.rs  ast_common.rs  declaration.rs  emit.rs  error_type.rs  ft.rs  lib.rs  minify.rs  obfuscate.rs  operations.rs  parser.rs  rest.rs  small_vec.rs  source_properties.rs  spread.rs  symbol_table.rs  tokenizer.rs  type_checking.rs  type_infer.rs  types.rs
rstsc/tests/: large_tsc_tests.rs  tests.ts  tsc.rs  tsc_basic_functions.rs  tsc_basic_variables.rs  tsc_functions.rs  tsc_other.rs  tsc_types.rs  tsc_variables.rs
rstsc/tests/common/: mod.rs
test/: tester.ts  tests.ts
ts_compile/: Cargo.toml  test.ts
ts_compile/src/: asi.rs  compiler.rs  emitter.rs  lib.rs  main.rs  server.rs  tokenizer.rs  transformer.rs
ts_compile/tests/: declarations.rs  fn_args.rs  generics.rs  types.rs  visibility_modifier.rs
ts_compile/tests/common/: mod.rs
tsc_server/: README.md  bun.lockb  index.ts  package.json
