[package]
name = "ast_based"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = 3  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
