[package]
name = "rstsc"
version = "0.1.1"
edition = "2021"

[dependencies]
cap = { version = "0.1.2", features = ["stats"] }
lazy_static = "1.5.0"
phf = { version = "0.11.2", features = ["macros"] }
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.10.4"
reqwest = { version = "0.12.23", features = ["blocking"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
