[package]
name = "rstsc"
version = "0.2.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
phf = { version = "0.11.2", features = ["macros"] }
cap = { version = "0.1.2", features = ["stats"] }

[dev-dependencies]
reqwest = { version = "0.12.23", features = ["blocking"] }
regex = "1.10.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
